--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,36 @@
     "lint": "eslint",
     "build:android": "npm run build && npx cap sync android",
     "android": "npx cap open android",
-    "cap:sync": "npx cap sync",
-    "cap:copy": "npx cap copy"
+    "sync": "npx cap sync",
+    "copy": "npx cap copy"
   },
   "dependencies": {
+    "@capacitor-community/speech-recognition": "^7.0.1",
+    "@capacitor-community/text-to-speech": "^8.0.0",
+    "@capacitor/action-sheet": "^8.0.0",
     "@capacitor/android": "^8.0.0",
     "@capacitor/app": "^8.0.0",
+    "@capacitor/browser": "^8.0.0",
+    "@capacitor/camera": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
+    "@capacitor/clipboard": "^8.0.0",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/device": "^8.0.0",
+    "@capacitor/dialog": "^8.0.0",
+    "@capacitor/filesystem": "^8.1.0",
     "@capacitor/haptics": "^8.0.0",
     "@capacitor/keyboard": "^8.0.0",
+    "@capacitor/local-notifications": "^8.0.0",
+    "@capacitor/motion": "^8.0.0",
     "@capacitor/network": "^8.0.0",
     "@capacitor/preferences": "^8.0.0",
+    "@capacitor/push-notifications": "^8.0.0",
+    "@capacitor/screen-reader": "^8.0.0",
+    "@capacitor/share": "^8.0.0",
     "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
+    "@capacitor/text-zoom": "^8.0.0",
+    "@capacitor/toast": "^8.0.0",
     "@phosphor-icons/react": "^2.1.10",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
